# truman

./: .env.example  .gitignore  README.md  jianghu_replay.html  pyproject.toml  todo.md
runs/ab25/: events.jsonl
runs/g1/: events.jsonl
runs/g1/checkpoints/: t00008.json
runs/g2/: events.jsonl
runs/g3/: events.jsonl
runs/g3/checkpoints/: t00012.json
runs/g4/: events.jsonl
runs/g4/checkpoints/: t00012.json
runs/g5/: events.jsonl
runs/g5/checkpoints/: t00012.json  t00024.json  t00036.json  t00048.json
runs/g6/: events.jsonl
runs/g6/checkpoints/: t00012.json  t00024.json  t00036.json  t00048.json
runs/j1/: events.jsonl
runs/j1/checkpoints/: t00012.json  t00024.json  t00036.json  t00048.json
runs/j1b/: events.jsonl
runs/j1b/checkpoints/: t00060.json  t00072.json  t00084.json  t00096.json
scenarios/: hakoniwa.py  jianghu.py  seahaven.py
tests/: smoke.py
truman/: cli.py  config.py
truman/agents/: cognition.py  memory.py
truman/director/: awareness.py  director.py
truman/llm/: base.py  client.py  prompts.py  schemas.py  stub.py  tokens.py
truman/llm/providers/: anthropic_client.py  gemini_client.py
truman/obs/: checkpoint.py  eventlog.py
truman/world/: engine.py  grid.py  observation.py  state.py
